Réglé pb de relink et de dépendance dans le makefile de ft_printf

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -18,13 +18,11 @@ RM			:=	rm -f
 
 all:			libs $(NAME)
 
-$(NAME):		$(OBJS)
+$(NAME):		$(OBJS) $(LIBS)
 				cp $(LIBS) $(NAME)
 				ar rcs $(NAME) $(OBJS)
 
-$(OBJS): 		$(SRCS) $(HDRS)
-
-%.o:			%.c
+%.o:			%.c $(HDRS)
 				$(CC) $(CFLAGS) -c $< -o $@
 
 libs:
